--- a/sinux-ui/package.json
+++ b/sinux-ui/package.json
@@ -6,6 +6,7 @@
   "module": "dist/element3-ui.esm-bundler.js",
   "unpkg": "lib/index.js",
   "jsdelivr": "dist/element3-ui.global.js",
+  "//": "文件模式数组：描述了将软件包作为依赖项安装时要包括的条目",
   "files": [
     "lib",
     "dist",
@@ -14,6 +15,7 @@
     "types"
   ],
   "typings": "types/index.d.ts",
+  "//": "scripts”属性是一个字典，其中包含在包的生命周期中的各个时间运行的脚本命令",
   "scripts": {
     "bootstrap": "npm i",
     "build:file": "node build/bin/iconInit.js & node build/bin/build-entry.js & node build/bin/i18n.js & node build/bin/version.js",
@@ -86,6 +88,7 @@
     "resize-observer-polyfill": "^1.5.0",
     "throttle-debounce": "^1.0.1"
   },
+  "//": "在某些情况下，您想表达软件包与主机工具或库的兼容性，而不必一定要require对此主机进行操作。通常将其称为插件。",
   "peerDependencies": {
     "vue": "^3.0.0"
   },
