--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:file": "node build/bin/iconInit.js & node build/bin/build-entry.js & node build/bin/i18n.js  & node build/bin/version.js",
     "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
+    "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "dev:play": "npm run build:file && cross-env NODE_ENV=development PLAY_ENV=true webpack-dev-server --config build/webpack.demo.js",
     "test": "test"
   },
@@ -15,9 +16,13 @@
   "author": "liyi",
   "license": "ISC",
   "devDependencies": {
-    "cp-cli": "^2.0.0",
+    "@types/jest": "^26.0.15",
+    "cp-cli": "^1.0.2",
+    "cross-env": "^7.0.2",
     "json-templater": "^1.2.0",
     "postcss": "^8.1.4",
+    "typescript": "^4.0.5",
     "uppercamelcase": "^3.0.0"
-  }
+  },
+  "dependencies": {}
 }
